--- a/views/inspection.ejs
+++ b/views/inspection.ejs
@@ -91,17 +91,19 @@
           <tr>
             <th width="120px" class="text-left">TANGGAL</th>
             <td class="text-bold">
-              <%= new Date(date).toLocaleString('id-ID', {weekday: 'long', year:
-              'numeric', month: 'long', day: '2-digit'}).toUpperCase() %>
+              <%= new Date(reportDate).toLocaleString('id-ID', {weekday: 'long',
+              year: 'numeric', month: 'long', day: '2-digit'}).toUpperCase() %>
             </td>
           </tr>
           <tr>
             <th class="text-left">SHIFT</th>
-            <td class="text-bold"><%= shift %> (07:00-08:00)</td>
+            <td class="text-bold">
+              <%= shiftDetail.name %> (<%= shiftStart %> - <%= shiftEnd %>)
+            </td>
           </tr>
           <tr>
             <th class="text-left">NAMA PETUGAS</th>
-            <td class="text-bold"><%= data[0].User.name %></td>
+            <td class="text-bold"><%= user.name %></td>
           </tr>
           <!-- <tr>
             <th class="text-left">JAM PATROLI</th>
