--- a/views/inspection.ejs
+++ b/views/inspection.ejs
@@ -153,7 +153,7 @@
             <td class="text-center">
               <% el.InspectionImages.forEach(image => { %>
               <img
-                src="http://localhost:3000/<%= image.path %>"
+                src="<%= baseUrl %>/<%= image.path %>"
                 alt="Inspection Image"
                 style="width: 120px; height: auto"
               />
