--- a/views/inspection.ejs
+++ b/views/inspection.ejs
@@ -11,7 +11,7 @@
     }
 
     * {
-      font-size: 0.8rem;
+      font-size: 1rem;
     }
 
     .container {
@@ -101,14 +101,6 @@
               <%= shiftDetail.name %> (<%= shiftStart %> - <%= shiftEnd %>)
             </td>
           </tr>
-          <tr>
-            <th class="text-left">NAMA PETUGAS</th>
-            <td class="text-bold"><%= user.name %></td>
-          </tr>
-          <!-- <tr>
-            <th class="text-left">JAM PATROLI</th>
-            <td class="text-bold">22.00 - 06.00 WIB</td>
-          </tr> -->
         </tbody>
       </table>
 
@@ -120,6 +112,7 @@
             <th>POINT STATION NO</th>
             <th>AREA</th>
             <th>WAKTU</th>
+            <th>PETUGAS</th>
             <th>HASIL PATROLI</th>
             <th>CAPTURE</th>
           </tr>
