--- a/views/inspection.ejs
+++ b/views/inspection.ejs
@@ -81,7 +81,7 @@
     <div class="container">
       <h3>
         PT. UNGARAN SARI GARMENTS <br />
-        SECURITY - UNGARAN
+        SECURITY - <%= site.name %>
       </h3>
 
       <h1 class="text-center">LAPORAN PATROLI</h1>
