--- a/views/inspection.ejs
+++ b/views/inspection.ejs
@@ -5,8 +5,9 @@
     <style>
       body {
         font-family: Arial, sans-serif;
-        margin: 0;
+        margin: 0 auto;
         padding: 0;
+        width: 1024px;
       }
 
       * {
