--- a/views/inspection.ejs
+++ b/views/inspection.ejs
@@ -5,9 +5,9 @@
     <style>
       body {
         font-family: Arial, sans-serif;
-        margin: 0 auto;
+        margin: 40px auto;
         padding: 0;
-        width: 1024px;
+        width: 960px;
       }
 
       * {
