--- a/views/inspection.ejs
+++ b/views/inspection.ejs
@@ -112,7 +112,7 @@
       <table>
         <thead>
           <tr>
-            <th>POINT STATION NO</th>
+            <th style="width: 70px">POINT STATION NO</th>
             <th>AREA</th>
             <th>WAKTU</th>
             <th>PETUGAS</th>
